# tg_ai_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
tg_assist/: __main__.py  app.py
tg_assist/utils/: telegram_auth_helper.py
